fixed loader - now displays again. with updated page overflow settings it had stopped loading

--- a/projects/splash/static/css/style.css
+++ b/projects/splash/static/css/style.css
@@ -995,6 +995,7 @@ button:focus{
 #loading-page {
     display: block;
     visibility: visible;
+    overflow: visible;
 
 }
 
